I have to link the real download pages in playstore

--- a/index.html
+++ b/index.html
@@ -103,6 +103,25 @@
 
     <main id="main" class="site-main">
 
+        <section class="site-section section-counters text-center">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-4 col-xs-12">
+                        <p class="counter start" data-to="3" data-speed="2000">0</p>
+                        <h4>Years Experience</h4>
+                    </div>
+                    <div class="col-sm-4 col-xs-12">
+                        <p class="counter start" data-to="5" data-speed="2000">0</p>
+                        <h4>Projects Delivered</h4>
+                    </div>
+                    <div class="col-sm-4 col-xs-12">
+                        <p id="infinity" class="counter" data-from="0" data-to="1" data-speed="1000">0</p>
+                        <h4>Seconds on this site!<br>What are you waiting for?</h4>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section id="about" class="site-section section-about text-center">
             <div class="container">
 
@@ -220,9 +239,12 @@
                         <div class="service">
                             <img style="width: 60px;" src="./assets/img/booking.png" alt="mobile">
                             <h4>DHEMAX SA</h4>
-                            <p>I was a junior mobile developer between <span style="font-weight: 900;">April to August
+                            <p>I was a junior mobile developer at <a href="https://www.dhemax.com/en"><span
+                                        style="font-weight: 900;">Dhemax</span></a> between
+                                <span style="font-weight: 900;">April to August
                                     in 2023</span>. Using
-                                Jira for the scrum job management.</p>
+                                Jira for the scrum job management.
+                            </p>
                             <p>Here I made a clone of their product called <span style="font-weight: 900;">ELECTRIC CAR
                                     CHARGER CLONE</span>.</p>
                         </div>
@@ -234,10 +256,13 @@
                         <div class="service">
                             <!-- <img src="./assets/img/back-end.svg" alt="Back End Developer"> -->
                             <h4>BL Trading SPA</h4>
-                            <p>I worked for BL Trading since <span style="font-weight: 900;">April 2020 to April
+                            <p>I worked for <a href="https://www.blcorporations.com/bltrading"><span
+                                        style="font-weight: 900;">BL Trading</span></a> since <span
+                                    style="font-weight: 900;">April 2020 to April
                                     2023</span>. There I developed the system that
                                 integrates Mercado Libre information API, which uses the page <a
-                                    href="https://sellers-bltrading.cl" target="_blank">Sellers BL Trading</a>.
+                                    href="https://sellers-bltrading.cl" target="_blank"><span
+                                        style="font-weight: 900;">Sellers BL Trading</span></a>.
                             </p>
                             <p>With their system a mock an API response for my project <span
                                     style="font-weight: 900;">GLOBAL SELLER ADMINISTRATOR</span>.</p>
@@ -324,25 +349,6 @@
             </div>
         </section>
 
-        <section class="site-section section-counters text-center">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-4 col-xs-12">
-                        <p class="counter start" data-to="3" data-speed="2000">0</p>
-                        <h4>Years Experience</h4>
-                    </div>
-                    <div class="col-sm-4 col-xs-12">
-                        <p class="counter start" data-to="5" data-speed="2000">0</p>
-                        <h4>Projects Delivered</h4>
-                    </div>
-                    <div class="col-sm-4 col-xs-12">
-                        <p id="infinity" class="counter" data-from="0" data-to="1" data-speed="1000">0</p>
-                        <h4>Seconds on this site!<br>What are you waiting for?</h4>
-                    </div>
-                </div>
-            </div>
-        </section>
-
         <section id="contact" class="site-section section-form text-center">
             <div class="container">
 
@@ -426,49 +432,6 @@
         </div>
 
     </footer>
-
-
-    <!-- <footer id="colophon" class="footer site-footer">
-
-        <div class="container">
-            <div class="row">
-
-                <div class="col-sm-4 col-xs-12">
-
-
-                    <a href="https://youtube.com/@CodeChunksEs" target="_blank" class="fa-youtube">
-                        <span class="label">YouTube</span>
-                    </a>
-
-                    <a href="https://www.linkedin.com/in/rodrigo-javier-gd/" target="_blank"
-                        class="fa-linkedin">
-                        <span class="label">LinkedIn</span>
-                    </a>
-
-                    <a href="https://github.com/rodrigojavier101" target="_blank" class="fa-github">
-                        <span class="label">GitHub</span>
-                    </a>
-
-                    <a href="https://bitbucket.org/RodrigoJavier101/workspace/repositories/" target="_blank"
-                        class="fa-bitbucket">
-                        <span class="label">Bitbucket</span>
-                    </a>
-
-                </div>
-
-                <div class="col-sm-4 col-sm-offset-0">
-                    <p class="copyright">Chile, 2024</p>
-                </div>
-
-                <div class="col-sm-4 col-xs-3">
-                    <div class="text-right page-scroll">
-                        <a class="icon icon-up-bg" href="#hero"><i class="icon-up"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </footer> -->
 
     <div id="portfolioItem1" class="modal fade" role="dialog">
         <div class="modal-dialog">
