--- a/index.html
+++ b/index.html
@@ -254,7 +254,6 @@
 
                     <div class="col-sm-12">
                         <div class="service">
-                            <!-- <img src="./assets/img/back-end.svg" alt="Back End Developer"> -->
                             <h4>BL Trading SPA</h4>
                             <p>I worked for <a href="https://www.blcorporations.com/bltrading"><span
                                         style="font-weight: 900;">BL Trading</span></a> since <span
@@ -349,53 +348,38 @@
             </div>
         </section>
 
-        <section id="contact" class="site-section section-form text-center">
+        <section id="contact" class="site-section section-form overlay text-center">
             <div class="container">
-
-                <h3>Contact</h3>
-                <img src="./assets/img/lines.svg" class="img-lines" alt="lines">
-                <h4><span style="font-weight: 300; letter-spacing: 0.1rem;">rodrigojaviergd<span
-                            style="font-weight: 900; font-size: 1.5em;"><i>@</i></span>gmail<span
-                            style="font-weight: 900; font-size: 1.5em;">.</span>com</span></h4>
-                <h4><span style="font-weight: 300;">+56 9 9609 5384</span></h4>
-                <img src="./assets/img/lines.svg" class="img-lines" alt="lines">
                 <div class="row">
+                    <h3>Contact</h3>
+                    <img src="./assets/img/lines.svg" class="img-lines" alt="lines">
+                    <h4><span style="font-weight: 300; letter-spacing: 0.1rem;">rodrigojaviergd<span
+                                style="font-weight: 900; font-size: 1.5em;"><i>@</i></span>gmail<span
+                                style="font-weight: 900; font-size: 1.5em;">.</span>com</span></h4>
+                    <h4><span style="font-weight: 300;">+56 9 9609 5384</span></h4>
+                    <img src="./assets/img/lines.svg" class="img-lines" alt="lines">
+                    <div class="row">
 
-                    <div class="col-sm-12 col-xs-12">
+                        <div class="col-sm-12 col-xs-12">
 
 
 
-                        <!-- <a class="icon facebook-bg" href="https://github.com/jardindunoix" target="_blank"><i
-                                class="icon-facebook"></i></a>
-                        <a class="icon gplus-bg" href="https://www.linkedin.com/in/rodrigo-javier-gd" target="_blank"><i
-                                class="icon-linkedin"></i></a>
-                        <a class="icon twitter-bg" href="https://youtube.com/@CodeChunksEs" target="_blank"><i
-                                class="icon-twitter"></i></a> -->
+                            <!-- <a class="icon facebook-bg" href="https://github.com/jardindunoix" target="_blank"><i
+                                                    class="icon-facebook"></i></a>
+                                            <a class="icon gplus-bg" href="https://www.linkedin.com/in/rodrigo-javier-gd" target="_blank"><i
+                                                    class="icon-linkedin"></i></a>
+                                            <a class="icon twitter-bg" href="https://youtube.com/@CodeChunksEs" target="_blank"><i
+                                                    class="icon-twitter"></i></a> -->
+
+                        </div>
+
+
+
+                        <!-- <img src="./assets/img/lines.svg" class="img-lines" alt="lines"> -->
 
                     </div>
-
-
-
-                    <!-- <img src="./assets/img/lines.svg" class="img-lines" alt="lines"> -->
 
                 </div>
-
-                <!-- <form>
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <input type="text" name="name" class="form-control mt-x-0" placeholder="Name" required>
-                        </div>
-                        <div class="col-sm-6">
-                            <input type="email" name="email" class="form-control" placeholder="Email" required>
-                        </div>
-                        <div class="col-sm-12">
-                            <textarea name="message" id="mesaage" class="form-control" placeholder="Message"
-                                required></textarea>
-                        </div>
-                    </div>
-                    <button href="#" class="btn btn-border" type="submit">Hire Me <span
-                            class="glyphicon glyphicon-send"></span></button>
-                </form> -->
             </div>
         </section>
 
