sending to repos

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <link href="./assets/css/style.css" rel="stylesheet">
     <link href="./assets/css/responsive.css" rel="stylesheet">
-    <link href="./assets/css/footer.css" rel="stylesheet">
+    <!-- <link href="./assets/css/footer.css" rel="stylesheet"> -->
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -123,7 +123,7 @@
         </section>
 
         <section id="about" class="site-section section-about text-center">
-        
+
             <div class="container">
 
                 <div class="row">
@@ -318,20 +318,48 @@
 
     </main>
 
+    <div id="footer">
+        <nav class="footer-icons-sn">
+
+            <ul>
+
+                <li>
+                    <a href="https://www.linkedin.com/in/rodrigo-javier-gd/" target="_blank" class="brands fa-linkedin">
+                        <span class="label">LinkedIn</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="https://github.com/jardindunoix/" target="_blank" class="brands fa-github">
+                        <span class="label">GitHub</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="https://youtube.com/@CodeChunksEs/" target="_blank" class="brands fa-youtube">
+                        <span class="label">YouTube</span>
+                    </a>
+                </li>
+
+            </ul>
+
+        </nav>
+    </div>
+
     <footer id="colophon" class="site-footer">
 
         <div class="container">
             <div class="row">
 
                 <div class="col-sm-4 col-xs-12">
-
+                    <!-- 
                     <a class="icon linkedin-bg" href="https://www.linkedin.com/in/rodrigo-javier-gd/" target="_blank"><i
                             class="icon-linkedin"></i></a>
 
                     <a class="icon linkedin-bg" href="https://github.com/jardindunoix/" target="_blank"><i
                             class="icon-linkedin"></i></a>
 
-                    <a class="fa-youtube" href="https://youtube.com/@CodeChunksEs" target="_blank"></a>
+                    <a class="fa-youtube" href="https://youtube.com/@CodeChunksEs" target="_blank"></a> -->
 
                 </div>
 
@@ -442,6 +470,11 @@
         </div>
     </div>
 
+
+    <script src="./assets/js/jquery.min.js"></script>
+    <script src="./assets/js/browser.min.js"></script>
+    <script src="./assets/js/breakpoints.min.js"></script>
+    <!-- OLD -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="./assets/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
