sending to repos

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-    ''
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
@@ -89,7 +88,7 @@
                         <a href="./assets/certs/Rodrigo Javier Garrido Dagle resume --.pdf" target="_blank"
                             class="btn btn-fill ">My resume</a>
                         <div class="clearfix visible-xxs"></div>
-                        <a href="#portfolio" class="btn btn-border">See down below</a>
+                        <a href="#portfolio" class="btn btn-border">Take a look of my projects</a>
                     </div>
                 </div>
 
@@ -287,9 +286,9 @@
                     <h3>Contact</h3>
                     <img src="./assets/img/lines.svg" class="img-lines" alt="lines">
                     <h4><span style="font-weight: 300; letter-spacing: 0.1rem;">rodrigojaviergd<span
-                                style="font-weight: 900; font-size: 1.5em;"><i>@</i></span>gmail<span
+                                style="font-weight: 900; font-size: 1.2em;">@</span>gmail<span
                                 style="font-weight: 900; font-size: 1.5em;">.</span>com</span></h4>
-                    <h4><span style="font-weight: 300;">+56 9 9609 5384</span></h4>
+                    <h4><span style="font-weight: 300;">+56996095384</span></h4>
                     <img src="./assets/img/lines.svg" class="img-lines" alt="lines">
                     <div class="row">
 
