--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
-    <link href="./assets/css/fontawesome-all.min.css" rel="stylesheet">
+    <!-- <link href="./assets/css/fontawesome-all.min.css" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
 
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/icons/icon9.png">
@@ -354,8 +354,10 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-                    <img class="img-res" src="./assets/img/portfolio-1.jpg" alt="">
+                    <a class="close" data-dismiss="modal">
+                        <span class="glyphicon glyphicon-remove"></span>
+                    </a>
+                    <img class="img-res" src="./assets/img/Portfolio-1.jpg" alt="">
                 </div>
                 <div class="modal-body">
                     <h4 class="modal-title">Monitor Politico</h4>
@@ -375,7 +377,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-                    <img class="img-res" src="./assets/img/portfolio-2.jpg" alt="">
+                    <img class="img-res" src="./assets/img/Portfolio-2.jpg" alt="">
                 </div>
                 <div class="modal-body">
                     <h4 class="modal-title">Mercado-Libre global seller</h4>
@@ -399,7 +401,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-                    <img class="img-res" src="./assets/img/portfolio-3.jpg" alt="">
+                    <img class="img-res" src="./assets/img/Portfolio-3.jpg" alt="">
                 </div>
                 <div class="modal-body">
                     <h4 class="modal-title">Electric vehicle charger</h4>
@@ -426,7 +428,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-                    <img class="img-res" src="./assets/img/portfolio-4.jpg" alt="">
+                    <img class="img-res" src="./assets/img/Portfolio-4.jpg" alt="">
                 </div>
                 <div class="modal-body">
                     <h4 class="modal-title">Scheduler for Common Debts</h4>
