--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
     <!-- <link href="./assets/css/fontawesome-all.min.css" rel="stylesheet"> -->
+    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
+
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
 
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/icons/icon9.png">
@@ -236,7 +238,7 @@
 
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="./assets/img/Portfolio-3.jpg" class="img-res" alt="">
+                            <img src="./assets/img/Portfolio-6.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4 style="font-size: 1.3em;">Electric vehicle charger</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem3"><span
@@ -266,6 +268,7 @@
                             </div>
                         </div> -->
                     </div>
+
                     <div class="col-md-4 col-xs-6">
                         <!-- <div class="portfolio-item">
                             <img src="./assets/img/Portfolio-6.jpg" class="img-res" alt="">
@@ -341,7 +344,9 @@
 
                 <div class="col-sm-4 col-xs-3">
                     <div class="text-right page-scroll">
-                        <a class="icon icon-up-bg" href="#hero"><i class="icon-up"></i></a>
+                        <a class="icon icon-up-bg" href="#hero">
+                            <i class="fa-angle-double-up"></i>
+                        </a>
                     </div>
                 </div>
 
@@ -355,7 +360,9 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <a class="close" data-dismiss="modal">
-                        <span class="glyphicon glyphicon-remove"></span>
+                        <!-- <span class="glyphicon glyphicon-remove"></span> -->
+                        <i class="fa-brands fa-github-square"></i>
+
                     </a>
                     <img class="img-res" src="./assets/img/Portfolio-3.jpg" alt="">
                 </div>
