sending to repos

--- a/index.html
+++ b/index.html
@@ -344,8 +344,8 @@
 
                 <div class="col-sm-4 col-xs-3">
                     <div class="text-right page-scroll">
-                        <a class="icon icon-up-bg" href="#hero">
-                            <i class="fa-angle-double-up"></i>
+                        <a class="icon icon-up-bg fa-youtube" href="#hero">
+                            <!-- <i class=""></i> -->
                         </a>
                     </div>
                 </div>
