ready the icons, I need publication of my apps

--- a/index.html
+++ b/index.html
@@ -14,15 +14,19 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
-    <!-- <link href="./assets/css/fontawesome-all.min.css" rel="stylesheet"> -->
-    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
-
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
-
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/icons/icon9.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/icons/icon9.png">
 
-    <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
+
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+
+
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+
+
 
     <link href="./assets/css/style.css" rel="stylesheet">
     <link href="./assets/css/responsive.css" rel="stylesheet">
@@ -112,7 +116,7 @@
                         <h4>Years Experience</h4>
                     </div>
                     <div class="col-sm-4 col-xs-12">
-                        <p class="counter start" data-to="5" data-speed="2000">0</p>
+                        <p class="counter start" data-to="4" data-speed="2000">0</p>
                         <h4>Projects Delivered</h4>
                     </div>
                     <div class="col-sm-4 col-xs-12">
@@ -208,10 +212,12 @@
 
         <section id="portfolio" class="site-section section-portfolio">
             <div class="container">
+
                 <div class="text-center">
                     <h3>Portfolio</h3>
                     <img src="./assets/img/lines.svg" class="img-lines" alt="lines">
                 </div>
+
                 <div class="row">
 
                     <div class="col-md-4 col-xs-6">
@@ -219,8 +225,9 @@
                             <img src="./assets/img/Portfolio-1.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4 style="font-size: 1.3em;">Monitor Político</h4>
-                                <a href="#" data-toggle="modal" data-target="#portfolioItem1"><span
-                                        class="glyphicon glyphicon-eye-open"></span></a>
+                                <a href="#" data-toggle="modal" data-target="#portfolioItem1"
+                                    class="brands3 fa-search-plus">
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -230,8 +237,9 @@
                             <img src="./assets/img/Portfolio-2.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4 style="font-size: 1.3em;">Mercado-Libre global seller</h4>
-                                <a href="#" data-toggle="modal" data-target="#portfolioItem2"><span
-                                        class="glyphicon glyphicon-eye-open"></span></a>
+                                <a href="#" data-toggle="modal" data-target="#portfolioItem2"
+                                    class="brands3 fa-search-plus">
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -241,8 +249,9 @@
                             <img src="./assets/img/Portfolio-6.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4 style="font-size: 1.3em;">Electric vehicle charger</h4>
-                                <a href="#" data-toggle="modal" data-target="#portfolioItem3"><span
-                                        class="glyphicon glyphicon-eye-open"></span></a>
+                                <a href="#" data-toggle="modal" data-target="#portfolioItem3"
+                                    class="brands3 fa-search-plus">
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -252,8 +261,9 @@
                             <img src="./assets/img/Portfolio-4.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4 style="font-size: 1.3em;">Scheduler</h4>
-                                <a href="#" data-toggle="modal" data-target="#portfolioItem4"><span
-                                        class="glyphicon glyphicon-eye-open"></span></a>
+                                <a href="#" data-toggle="modal" data-target="#portfolioItem4"
+                                    class="brands3 fa-search-plus">
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -344,8 +354,7 @@
 
                 <div class="col-sm-4 col-xs-3">
                     <div class="text-right page-scroll">
-                        <a class="icon icon-up-bg fa-youtube" href="#hero">
-                            <!-- <i class=""></i> -->
+                        <a class="brands2 fa-arrow-alt-circle-up" href="#hero">
                         </a>
                     </div>
                 </div>
@@ -358,23 +367,24 @@
     <div id="portfolioItem1" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="modal-header">
-                    <a class="close" data-dismiss="modal">
-                        <!-- <span class="glyphicon glyphicon-remove"></span> -->
-                        <i class="fa-brands fa-github-square"></i>
 
+                <div class="modal-header">
+                    <a class="close brands2 fa-window-close" data-dismiss="modal">
                     </a>
                     <img class="img-res" src="./assets/img/Portfolio-3.jpg" alt="">
                 </div>
+
                 <div class="modal-body">
                     <h4 class="modal-title">Monitor Politico</h4>
                     <p>It is a backend-agnostic project that uses web scraping to get the data and retrieves the
                         congressmen information.</p>
                 </div>
+
                 <div class="modal-footer">
                     <a href="https://play.google.com/store/search?q=monitor%20politico&c=apps" target="_blank"
                         class="btn btn-fill">Go to play store</a>
                 </div>
+
             </div>
         </div>
     </div>
@@ -383,7 +393,8 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
+                    <a class="close brands2 fa-window-close" data-dismiss="modal">
+                    </a>
                     <img class="img-res" src="./assets/img/Portfolio-3.jpg" alt="">
                 </div>
                 <div class="modal-body">
@@ -407,7 +418,8 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
+                    <a class="close brands2 fa-window-close" data-dismiss="modal">
+                    </a>
                     <img class="img-res" src="./assets/img/Portfolio-3.jpg" alt="">
                 </div>
                 <div class="modal-body">
@@ -434,7 +446,8 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
+                    <a class="close brands2 fa-window-close" data-dismiss="modal">
+                    </a>
                     <img class="img-res" src="./assets/img/Portfolio-3.jpg" alt="">
                 </div>
                 <div class="modal-body">
