sending to repos

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                     </div>
 
                     <div class="col-md-4 col-xs-6">
-                        <div class="portfolio-item">
+                        <!-- <div class="portfolio-item">
                             <img src="./assets/img/Portfolio-6.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4 style="font-size: 1.3em;">Electric vehicle charger</h4>
@@ -253,11 +253,11 @@
                                     class="brands3 fa-search-plus">
                                 </a>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
 
                     <div class="col-md-4 col-xs-6">
-                        <div class="portfolio-item">
+                        <!-- <div class="portfolio-item">
                             <img src="./assets/img/Portfolio-4.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4 style="font-size: 1.3em;">Scheduler</h4>
@@ -265,7 +265,7 @@
                                     class="brands3 fa-search-plus">
                                 </a>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
 
                     <div class="col-md-4 col-xs-6">
