sending to repos

--- a/index.html
+++ b/index.html
@@ -343,8 +343,8 @@
                     <a href="https://github.com/jardindunoix/" target="_blank" class="brands fa-github">
                     </a>
 
-                    <a href="https://youtube.com/@CodeChunksEs/" target="_blank" class="brands fa-youtube">
-                    </a>
+                    <!-- <a href="https://youtube.com/@CodeChunksEs/" target="_blank" class="brands fa-youtube">
+                    </a> -->
 
                 </div>
 
