sending to repos

--- a/index.html
+++ b/index.html
@@ -307,20 +307,17 @@
 
                         <div class="col-sm-12 col-xs-12">
 
+                            <a href="https://www.linkedin.com/in/rodrigo-javier-gd/" target="_blank"
+                                class="brands fa-linkedin">
+                            </a>
 
+                            <a href="https://github.com/jardindunoix/" target="_blank" class="brands fa-github">
+                            </a>
 
-                            <!-- <a class="icon facebook-bg" href="https://github.com/jardindunoix" target="_blank"><i
-                                                    class="icon-facebook"></i></a>
-                                            <a class="icon gplus-bg" href="https://www.linkedin.com/in/rodrigo-javier-gd" target="_blank"><i
-                                                    class="icon-linkedin"></i></a>
-                                            <a class="icon twitter-bg" href="https://youtube.com/@CodeChunksEs" target="_blank"><i
-                                                    class="icon-twitter"></i></a> -->
+                            <!-- <a href="https://youtube.com/@CodeChunksEs/" target="_blank" class="brands fa-youtube">
+                        </a> -->
 
                         </div>
-
-
-
-                        <!-- <img src="./assets/img/lines.svg" class="img-lines" alt="lines"> -->
 
                     </div>
 
@@ -337,11 +334,11 @@
 
                 <div class="col-sm-4 col-xs-12">
 
-                    <a href="https://www.linkedin.com/in/rodrigo-javier-gd/" target="_blank" class="brands fa-linkedin">
+                    <!-- <a href="https://www.linkedin.com/in/rodrigo-javier-gd/" target="_blank" class="brands fa-linkedin">
                     </a>
 
                     <a href="https://github.com/jardindunoix/" target="_blank" class="brands fa-github">
-                    </a>
+                    </a> -->
 
                     <!-- <a href="https://youtube.com/@CodeChunksEs/" target="_blank" class="brands fa-youtube">
                     </a> -->
